Update image sizes and alt texts for better accessibility and consistency

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/GalileoGalieliPainting1.jpg" alt="Retrato de Galileo Galilei" class="rounded-circle" width="150" height="150">
-        <h2 class="lead">Eu sou Galileo Galilei</h2>
+        <img src="img/GalileoGalieliPainting1.jpg" alt="Retrato de Galileo Galilei" class="rounded-circle" width="250" height="250">
+        <h5>Eu sou Galileo Galilei</h5>
         <h1>Eu exploro o Universo</h1>
         <p>Sou físico, matemático, astrônomo e filósofo. Fiz descobertas revolucionárias sobre o movimento dos corpos, telescópios e o Sistema Solar. Através da observação e do método científico, mudei a forma como a humanidade vê o cosmos.</p>
         <p>Minhas contribuições</p>
@@ -35,7 +35,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/telescopio_galileu.png" class="card-img-top" alt="Imagem do telescópio de Galileu">
+                    <img src="img/telescopio_galileu.png" class="card-img-top" alt="Imagem do telescópio de Galileo">
                     <div class="card-body">
                         <h5 class="card-title">Telescópio de Galileo</h5>
                         <p class="card-text">Este telescópio refrator de lentes simples, construído no início do século XVII com tubo de madeira revestido em couro e detalhes dourados, proporcionava ampliação de até 20×, permitindo observar crateras lunares, manchas solares e satélites planetários de forma inédita. 
@@ -48,7 +48,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/termoscopio_Galileo1.jpg" width="200" height="500" class="card-img-top" alt="Imagem do termômetro de Galileu">
+                    <img src="img/termoscopio_Galileo1.jpg" width="200" height="500" class="card-img-top" alt="Imagem do termômetro de Galileo">
                     <div class="card-body">
                         <h5 class="card-title">Termoscópio de Galileo</h5>
                         <p class="card-text">O termoscópio de Galileo, inventado em 1597, era um dispositivo que registrava variações de temperatura pela dilatação do ar e subida de água num tubo sem escala graduada. Ele demonstrava a relação entre temperatura e densidade de fluidos, sendo um precursor dos termômetros modernos. O termoscópio consistia em um tubo de vidro com água e ar, onde a variação da temperatura fazia o ar se expandir ou contrair, movendo a água para cima ou para baixo no tubo.</p>
@@ -60,7 +60,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/compasso_Galileo.jpg" class="card-img-top" alt="Imagem do compasso de Galileu">
+                    <img src="img/compasso_Galileo.jpg" class="card-img-top" alt="Imagem do compasso de Galileo">
                     <div class="card-body">
                         <h5 class="card-title">Compasso de Galileo</h5>
                         <p class="card-text">O compasso geométrico e militar de Galileo, produzido entre 1597 e 1598, era um instrumento de cálculo que permitia realizar operações matemáticas complexas, como proporções, distâncias e balística. O compasso era acompanhado de um manual publicado em 1606, intitulado "Le operazioni del compasso geometrico et militare", que detalhava suas aplicações práticas. Este dispositivo foi um marco na história da matemática e da engenharia, influenciando o desenvolvimento de instrumentos de medição e cálculo.</p>
@@ -75,7 +75,7 @@
                     <img src="img/heliocentric-system.jpg" class="card-img-top" alt="Modelo Heliocêntrico">
                     <div class="card-body">
                         <h5 class="card-title">Modelo Heliocêntrico</h5>
-                        <p class="card-text">O modelo heliocêntrico, proposto por Copérnico e defendido por Galileu, revolucionou a astronomia ao afirmar que a Terra e os planetas giram em torno do Sol. Essa teoria desafiou o modelo geocêntrico, que colocava a Terra no centro do universo, e foi fundamental para o desenvolvimento da ciência moderna.</p>
+                        <p class="card-text">O modelo heliocêntrico, proposto por Copérnico e defendido por Galileo, revolucionou a astronomia ao afirmar que a Terra e os planetas giram em torno do Sol. Essa teoria desafiou o modelo geocêntrico, que colocava a Terra no centro do universo, e foi fundamental para o desenvolvimento da ciência moderna.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal4">Saiba mais</button>
                     </div>
                 </div>
@@ -83,10 +83,10 @@
             <!-- Projeto 5 -->
             <div class="col-md-4 mt-3">
                 <div class="card">
-                    <img src="img/galileo-moon-3.jpg" class="card-img-top" alt="Desenhos Lunares de Galileu">
+                    <img src="img/galileo-moon-3.jpg" class="card-img-top" alt="Desenhos Lunares de Galileo">
                     <div class="card-body">
-                        <h5 class="card-title">Desenhos Lunares de Galileu</h5>
-                        <p class="card-text">Os desenhos lunares de Galileu, realizados entre 1609 e 1610, foram as primeiras representações detalhadas da superfície lunar observadas através de um telescópio. Eles revelaram crateras, montanhas e vales, desafiando a visão aristotélica de uma Lua perfeita e imutável. Esses desenhos foram fundamentais para a astronomia, pois mostraram que a Lua era um corpo celeste complexo e não uma esfera perfeita.</p>
+                        <h5 class="card-title">Desenhos Lunares de Galileo</h5>
+                        <p class="card-text">Os desenhos lunares de Galileo, realizados entre 1609 e 1610, foram as primeiras representações detalhadas da superfície lunar observadas através de um telescópio. Eles revelaram crateras, montanhas e vales, desafiando a visão aristotélica de uma Lua perfeita e imutável. Esses desenhos foram fundamentais para a astronomia, pois mostraram que a Lua era um corpo celeste complexo e não uma esfera perfeita.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal5">Saiba mais</button>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <img src="img/Moons_galileo.gif" class="card-img-top" alt="Imagem das luas galileanas">
                     <div class="card-body">
                         <h5 class="card-title">Luas Galileanas</h5>
-                        <p class="card-text">As luas galileanas são quatro grandes satélites naturais de Júpiter: Ío, Europa, Ganimedes e Calisto. Descobertas por Galileu Galilei em 1610, essas luas foram as primeiras a serem observadas em órbita de um planeta diferente da Terra, desafiando a visão geocêntrica do universo. Cada uma delas possui características únicas, como atividade vulcânica em Ío e oceanos subterrâneos em Europa, tornando-as alvos de interesse para futuras pesquisas astrobiológicas.</p>
+                        <p class="card-text">As luas galileanas são quatro grandes satélites naturais de Júpiter: Ío, Europa, Ganimedes e Calisto. Descobertas por Galileo Galilei em 1610, essas luas foram as primeiras a serem observadas em órbita de um planeta diferente da Terra, desafiando a visão geocêntrica do universo. Cada uma delas possui características únicas, como atividade vulcânica em Ío e oceanos subterrâneos em Europa, tornando-as alvos de interesse para futuras pesquisas astrobiológicas.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal6">Saiba mais</button>
         </div>
     </main>
@@ -110,6 +110,8 @@
             <li><a href="https://archive.org/details/sidereus-nuncius-aka-starry-messenger" target="_blank"><em>Sidereus Nuncius</em> – Tradução em inglês (Archive.org)</a></li>
             <li><a href="https://hdl.loc.gov/loc.wdl/wdl.4187" target="_blank"><em>Diálogo sobre os Dois Sistemas do Mundo</em> – Manuscrito digitalizado (Biblioteca do Congresso)</a></li>
             <li><a href="https://archive.org/details/GalileiGalileoDialogueConcerningTheTwoChiefWorldSystemsEN155P." target="_blank"><em>Dialogue Concerning the Two Chief World Systems</em> – Tradução em inglês (Archive.org)</a></li>
+            <li><a href="https://www.britannica.com/biography/Galileo-Galilei" target="_blank">Biografia de Galileo Galilei – Encyclopædia Britannica</a></li>
+            <li><a href="https://www.history.com/topics/science/galileo" target="_blank">Galileo Galilei – History.com</a></li>
         </ul>
     </section>
 
@@ -175,8 +177,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O modelo heliocêntrico, proposto por Copérnico e defendido por Galileu, revolucionou a astronomia ao afirmar que a Terra e os planetas giram em torno do Sol. Essa teoria desafiou o modelo geocêntrico, que colocava a Terra no centro do universo, e foi fundamental para o desenvolvimento da ciência moderna.</p>
-                    <p>Galileu utilizou seu telescópio para observar os planetas e suas luas, coletando evidências que apoiavam o modelo heliocêntrico. Suas descobertas, como as luas de Júpiter e as fases de Vênus, foram cruciais para validar essa nova visão do cosmos.</p>
+                    <p>O modelo heliocêntrico, proposto por Copérnico e defendido por Galileo, revolucionou a astronomia ao afirmar que a Terra e os planetas giram em torno do Sol. Essa teoria desafiou o modelo geocêntrico, que colocava a Terra no centro do universo, e foi fundamental para o desenvolvimento da ciência moderna.</p>
+                    <p>Galileo utilizou seu telescópio para observar os planetas e suas luas, coletando evidências que apoiavam o modelo heliocêntrico. Suas descobertas, como as luas de Júpiter e as fases de Vênus, foram cruciais para validar essa nova visão do cosmos.</p>
                     <p>O modelo heliocêntrico não apenas transformou a astronomia, mas também teve um impacto profundo na filosofia e na religião da época, levando a uma reavaliação da posição da humanidade no universo.</p>
                     <p>Hoje, o modelo heliocêntrico é amplamente aceito e é a base da astronomia moderna, permitindo uma compreensão mais precisa do sistema solar e do universo como um todo.</p>
                 </div>
@@ -189,14 +191,14 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Desenhos Lunares de Galileu</h5>
+                    <h5 class="modal-title">Desenhos Lunares de Galileo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Os desenhos lunares de Galileu, realizados entre 1609 e 1610, foram as primeiras representações detalhadas da superfície lunar observadas através de um telescópio. Eles revelaram crateras, montanhas e vales, desafiando a visão aristotélica de uma Lua perfeita e imutável. Esses desenhos foram fundamentais para a astronomia, pois mostraram que a Lua era um corpo celeste complexo e não uma esfera perfeita.</p>
-                    <p>Galileu utilizou seu telescópio para observar a Lua e fez anotações cuidadosas sobre suas características. Seus desenhos foram publicados em seu livro "Sidereus Nuncius" (Mensagem das Estrelas), que se tornou um marco na história da astronomia.</p>
+                    <p>Os desenhos lunares de Galileo, realizados entre 1609 e 1610, foram as primeiras representações detalhadas da superfície lunar observadas através de um telescópio. Eles revelaram crateras, montanhas e vales, desafiando a visão aristotélica de uma Lua perfeita e imutável. Esses desenhos foram fundamentais para a astronomia, pois mostraram que a Lua era um corpo celeste complexo e não uma esfera perfeita.</p>
+                    <p>Galileo utilizou seu telescópio para observar a Lua e fez anotações cuidadosas sobre suas características. Seus desenhos foram publicados em seu livro "Sidereus Nuncius" (Mensagem das Estrelas), que se tornou um marco na história da astronomia.</p>
                     <p>Esses desenhos não apenas contribuíram para o entendimento da Lua, mas também abriram caminho para futuras observações astronômicas e ajudaram a estabelecer o método científico como uma abordagem válida para o estudo do cosmos.</p>
-                    <p>Os desenhos lunares de Galileu são considerados uma das primeiras representações científicas da Lua e continuam a ser estudados e admirados por astrônomos e historiadores da ciência até hoje.</p>
+                    <p>Os desenhos lunares de Galileo são considerados uma das primeiras representações científicas da Lua e continuam a ser estudados e admirados por astrônomos e historiadores da ciência até hoje.</p>
                 </div>
             </div>
         </div>
@@ -211,8 +213,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>As luas galileanas são quatro grandes satélites naturais de Júpiter: Ío, Europa, Ganimedes e Calisto. Descobertas por Galileu Galilei em 1610, essas luas foram as primeiras a serem observadas em órbita de um planeta diferente da Terra, desafiando a visão geocêntrica do universo. Cada uma delas possui características únicas, como atividade vulcânica em Ío e oceanos subterrâneos em Europa, tornando-as alvos de interesse para futuras pesquisas astrobiológicas.</p>
-                    <p>Galileu utilizou seu telescópio para observar essas luas e fez anotações detalhadas sobre suas órbitas e movimentos. Suas descobertas foram publicadas em seu livro "Sidereus Nuncius" (Mensagem das Estrelas), que se tornou um marco na história da astronomia.</p>
+                    <p>As luas galileanas são quatro grandes satélites naturais de Júpiter: Ío, Europa, Ganimedes e Calisto. Descobertas por Galileo Galilei em 1610, essas luas foram as primeiras a serem observadas em órbita de um planeta diferente da Terra, desafiando a visão geocêntrica do universo. Cada uma delas possui características únicas, como atividade vulcânica em Ío e oceanos subterrâneos em Europa, tornando-as alvos de interesse para futuras pesquisas astrobiológicas.</p>
+                    <p>Galileo utilizou seu telescópio para observar essas luas e fez anotações detalhadas sobre suas órbitas e movimentos. Suas descobertas foram publicadas em seu livro "Sidereus Nuncius" (Mensagem das Estrelas), que se tornou um marco na história da astronomia.</p>
                     <p>As luas galileanas são consideradas um dos principais exemplos de como a observação astronômica pode desafiar crenças estabelecidas e abrir novas fronteiras no entendimento do cosmos. Elas continuam a ser estudadas por cientistas modernos, que buscam entender melhor suas características e potencial para abrigar vida.</p>
                     <p>Hoje, as luas galileanas são alvos de missões espaciais e pesquisas científicas, contribuindo para o avanço do conhecimento sobre o sistema solar e a possibilidade de vida em outros mundos.</p>
                 </div>
@@ -222,10 +224,7 @@
 
     <footer class="container py-5">
         <h2>Entre em contato</h2>
-        <div>
-            <a href="https://pt.wikipedia.org/wiki/Galileu_Galilei">Biografia completa</a>
-        </div>
-        <p class="my-5 text-center">© Copyright 2025. Produzido em homenagem a Galileo Galilei</p>
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/LFIDlugosz/ProjetoPortfolio_GalileoGalilei?tab=readme-ov-file">Galileo Galilei's Portfolio</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/LFIDlugosz">Luís Filipe Iurk Dlugosz</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""></a></p>
     </footer>
 
     <script>
