--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
             <li><a href="https://hdl.loc.gov/loc.wdl/wdl.4187" target="_blank"><em>Diálogo sobre os Dois Sistemas do Mundo</em> – Manuscrito digitalizado (Biblioteca do Congresso)</a></li>
             <li><a href="https://archive.org/details/GalileiGalileoDialogueConcerningTheTwoChiefWorldSystemsEN155P." target="_blank"><em>Dialogue Concerning the Two Chief World Systems</em> – Tradução em inglês (Archive.org)</a></li>
             <li><a href="https://www.britannica.com/biography/Galileo-Galilei" target="_blank">Biografia de Galileo Galilei – Encyclopædia Britannica</a></li>
-            <li><a href="https://www.history.com/topics/science/galileo" target="_blank">Galileo Galilei – History.com</a></li>
         </ul>
     </section>
 
@@ -224,7 +223,7 @@
 
     <footer class="container py-5">
         <h2>Entre em contato</h2>
-        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/LFIDlugosz/ProjetoPortfolio_GalileoGalilei?tab=readme-ov-file">Galileo Galilei's Portfolio</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/LFIDlugosz">Luís Filipe Iurk Dlugosz</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""></a></p>
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/LFIDlugosz/ProjetoPortfolio_GalileoGalilei">Galileo Galilei's Portfolio</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/LFIDlugosz">Luís Filipe Iurk Dlugosz</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""></a></p>
     </footer>
 
     <script>
